--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
   "dependencies": {
     "axios": "^1.2.1",
     "bootstrap-icons": "^1.10.2",
+    "chart.js": "^4.1.1",
     "dotenv": "^16.0.3",
     "react": "^18.2.0",
+    "react-chartjs-2": "^5.1.0",
     "react-dom": "^18.2.0"
   },
   "devDependencies": {
