--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "dotenv": "^16.0.3",
     "react": "^18.2.0",
     "react-chartjs-2": "^5.1.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-glider": "^4.0.2"
   },
   "devDependencies": {
     "@types/react": "^18.0.26",
